manifests/deployment.yml
apiVersion : apps/v1beta1
kind: Deployment
metadata:
  name: "maycluster"
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: "maycluster"
    spec:
      containers:
        - name: "maycluster"
          image: "mayreg.azurecr.io/maycluster"
          ports:
          - containerPort: 80
